// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statusPageManager processIncidents() cluster filtering should notify if matches the cluster 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing a partial outage in our API affecting REST API component.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() cluster filtering should notify if matches the second cluster 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing a partial outage in our API affecting REST API component.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() integration filtering should notify active integrations and filter out inactive ones 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing a partial outage in our API affecting Gmail Integration component.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() integration filtering should notify if matches an active integration 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing a partial outage in our API affecting Facebook Integration component.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() should dispatch as many notifications as there are incidents 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id-1",
      "message": "
                Currently experiencing degraded performance in our API affecting REST API, GraphQL API components.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "warning",
      "style": "banner",
    },
  ],
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id-2",
      "message": "
                Currently experiencing a major outage in our API affecting REST API, GraphQL API components.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() should dispatch notification if its incident id is not stored in localStorage 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-my-incident-id",
      "message": "
                Currently experiencing a major outage in our API affecting REST API component.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() should dispatch notify accordingly with critical impact 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing a major outage in our API affecting REST API, GraphQL API components.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() should dispatch notify accordingly with major impact 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing a partial outage in our API affecting REST API, GraphQL API components.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "error",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() should dispatch notify accordingly with minor impact 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing degraded performance in our API affecting REST API, GraphQL API components.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "warning",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processIncidents() should dispatch notify accordingly with none impact 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "closable": true,
      "dismissible": false,
      "id": "status-page-components-incident-id",
      "message": "
                Currently experiencing operational in our API affecting REST API, GraphQL API components.
                Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "onClose": [Function],
      "status": "info",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processScheduledMaintenances() cluster filtering should notify if matches the cluster 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "dismissible": false,
      "id": "status-page-maintenance",
      "message": "A scheduled maintenance for
API affecting
REST API started <em>a few seconds ago</em>.

Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "showIcon": true,
      "status": "warning",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processScheduledMaintenances() cluster filtering should notify if matches the second cluster 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "dismissible": false,
      "id": "status-page-maintenance",
      "message": "A scheduled maintenance for
API affecting
REST API started <em>a few seconds ago</em>.

Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "showIcon": true,
      "status": "warning",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processScheduledMaintenances() should dispatch notify or not according to completed status 1`] = `Array []`;

exports[`statusPageManager processScheduledMaintenances() should dispatch notify or not according to in_progress status 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "dismissible": false,
      "id": "status-page-maintenance",
      "message": "A scheduled maintenance for
API affecting
REST API, GraphQL API will start <em>in 2 minutes</em>.

Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "showIcon": true,
      "status": "warning",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processScheduledMaintenances() should dispatch notify or not according to scheduled status 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "dismissible": false,
      "id": "status-page-maintenance",
      "message": "A scheduled maintenance for
API affecting
REST API, GraphQL API will start <em>in 2 minutes</em>.

Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "showIcon": true,
      "status": "info",
      "style": "banner",
    },
  ],
]
`;

exports[`statusPageManager processScheduledMaintenances() should dispatch notify or not according to verifying status 1`] = `
Array [
  Array [
    Object {
      "allowHTML": true,
      "dismissible": false,
      "id": "status-page-maintenance",
      "message": "A scheduled maintenance for
API affecting
REST API, GraphQL API will start <em>in 2 minutes</em>.

Find out more on our <a href=\\"https://status.gorgias.com/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">status page</a>.",
      "showIcon": true,
      "status": "warning",
      "style": "banner",
    },
  ],
]
`;
